Feat - integration of bullmq and add transactions

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,15 @@
 DB_PASSWORD = 
 DB_NAME = 
+DB_PORT = 
+DB_USERNAME = 
+DB_HOST = 
+
+FS_PROJECT_ID = 
+FS_PRIVATE_KEY = 
+FS_CLIENT_EMAIL = 
+
+REDIS_HOST = 
+REDIS_PORT = 
+
+EMAIL_USERNAME = 
+EMAIL_PASSWORD = 
