--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   db:
     image: postgres:14.3
@@ -12,3 +10,9 @@ services:
     container_name: transactionsdb
     volumes:
       - ./postgres:/var/lib/postgresql/data
+  redis:
+    image: redis:6.2-alpine
+    ports:
+      - 6379:6379
+    volumes:
+      - ./data:/data
